--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
        
 
-            <input placeholder="Pesquise..." class="input" name="text" type="text" id="busca">
+            <input placeholder="Pesquise um local" class="input" name="text" type="text" id="busca">
 
             <br>
             <br>
